--- a/ch-2.ipynb
+++ b/ch-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b7cadd6",
+   "id": "56a9d917",
    "metadata": {},
    "source": [
     "# Chapter 2"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b2dc0cd",
+   "id": "23b1057e",
    "metadata": {},
    "source": [
     "## 2E1\n",
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a44e79f",
+   "id": "e9b649ca",
    "metadata": {},
    "source": [
     "### Ans\n",
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b205a7b8",
+   "id": "05898f24",
    "metadata": {},
    "source": [
     "## 2E2\n",
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0dc417ff",
+   "id": "088fd161",
    "metadata": {},
    "source": [
     "### Ans\n",
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed5e0dc0",
+   "id": "1146a5de",
    "metadata": {},
    "source": [
     "## 2E3\n",
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88c139a0",
+   "id": "d9315409",
    "metadata": {},
    "source": [
     "### Ans"
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d7f8623a",
+   "id": "d1657e11",
    "metadata": {},
    "source": [
     "(1) $Pr(\\text{Monday} \\mid \\text{rain})$\n",
@@ -109,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4acc1ac1",
+   "id": "0ac6fcde",
    "metadata": {},
    "source": [
     "## 2E4.\n",
@@ -119,19 +119,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7a0953b",
+   "id": "2d319bfc",
    "metadata": {},
    "source": [
     "### Ans\n",
     "\n",
     "\n",
-    "In the case of the globe tossing example, it means that there is some \"true\" proportion of water to land. However, \"truth\"s like thees are usually fully known to us for many reasons (e.g. due to finite sample size, measurement error, unobserved variables, missing data, etc.). We can model our uncertainty using probability theory. Hopefully our model correctly represents truths, such as the \"true\" proportion of water to land. However, that's not guaranteed. When we say \"the probability of water is 0.7,\" colloquially, it means that *we* think that the probability of water is somewhere around 70%, given this point in time. We did not give a lot of significant digits. It might not actually be exactly 0.7, but it is somewhere around there. It still denotes uncertainty of the observer, given what we currently know.\n"
+    "In the case of the globe tossing example, it means that there is some \"true\" proportion of water to land. However, \"truth\"s like thees are usually fully known to us for many reasons (e.g. due to finite sample size, measurement error, unobserved variables, missing data, etc.). We can model our uncertainty using probability theory. Hopefully our model correctly represents truths, such as the \"true\" proportion of water to land. However, that's not guaranteed. When we say \"the probability of water is 0.7,\" colloquially, it means that we *think* that the probability of water is somewhere around 70%, given this point in time. We did not give a lot of significant digits. It might not actually be exactly 0.7, but it is somewhere around there. It still denotes uncertainty of the observer, given what we currently know.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "97699589",
+   "id": "b34899a2",
    "metadata": {},
    "outputs": [],
    "source": []
