--- a/ch-2.ipynb
+++ b/ch-2.ipynb
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7853765c",
+   "id": "041d2079",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "957545d1",
+   "id": "398fbca6",
    "metadata": {},
    "source": [
     "Using the [unlikely](https://github.com/Edderic/unlikely) library, Bayesian updating with the full batch, along with Bayesian updating through mini batches with only epsilon 0, seems to be more accurate than updating through mini batches with many epsilons. Mini batch updating leads to overinflated posterior distributions."
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4cb7d7dc",
+   "id": "400db2f3",
    "metadata": {},
    "source": [
     "## 2M2\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d3723e9a",
+   "id": "7624957d",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93ae4810",
+   "id": "98fad23d",
    "metadata": {},
    "source": [
     "## 2M3\n",
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a620e0d2",
+   "id": "6e452658",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "773ef1f3",
+   "id": "c6730e00",
    "metadata": {},
    "source": [
     "We can construct two models of the world: one corresponding to the Earth and one corresponding to Mars. We then run the ABC-SMC algorithm. Afterwards, we compute to see how many times the samples produced from Earth are accepted and compare that to how many times the samples from Mars were accepted. We then normalize those two numbers by the number of total samples. "
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "94246f05",
+   "id": "555e2319",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91bc0b12",
+   "id": "d06d1eda",
    "metadata": {},
    "source": [
     "$P(\\text{Earth} \\mid \\text{Data}) \\approx 0.23$ "
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fdcd936f",
+   "id": "f476686c",
    "metadata": {},
    "source": [
     "## 2M4\n",
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "aff43ed0",
+   "id": "8a44dbfe",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "3393b7b6",
+   "id": "5433afa9",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d51933eb",
+   "id": "06ae5700",
    "metadata": {},
    "source": [
     "## 2M5\n",
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f700e6e8",
+   "id": "38c18847",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af114b9d",
+   "id": "3bc3a2f7",
    "metadata": {},
    "source": [
     "## 2M6\n",
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "e602ab12",
+   "id": "912c95d6",
    "metadata": {},
    "outputs": [
     {
@@ -924,9 +924,85 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "154b8aa1",
+   "metadata": {},
+   "source": [
+    "## 2M7\n",
+    "\n",
+    "Assume again the original card problem, with a single card showing a black side face up. Before  looking at the other side, we draw another card from the bag and lay it face up on the table. The face  that is shown on the new card is white. Show that the probability that the first card, the one showing  a black side, has black on its other side is now 0.75. Use the counting method, if you can. Hint: Treat  this like the sequence of globe tosses, counting all the ways to see each observation, for each possible  first card."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "d6fb072f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Probability that the other side is black: 0.76\n"
+     ]
+    }
+   ],
+   "source": [
+    "def simulate_card_selection_2M7(cards, probas):\n",
+    "    \"\"\"\n",
+    "    Let Black be represented by 0, and White be represented by 1.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    count_black_other_side = 0\n",
+    "    num_sims = 10000\n",
+    "    num_div = 0\n",
+    "    \n",
+    "    for i in range(num_sims):\n",
+    "        \n",
+    "        # choose a card randomly\n",
+    "        chosen_card_index = np.random.choice(\n",
+    "            list(range(len(cards))), \n",
+    "            p=probas\n",
+    "        )\n",
+    "        \n",
+    "        chosen_card = cards[chosen_card_index]\n",
+    "        \n",
+    "        # choose a side to display\n",
+    "        chosen_side_to_show_index = np.random.randint(0,2)\n",
+    "        other_side_index = 1 - chosen_side_to_show_index\n",
+    "        chosen_side_to_show = chosen_card[chosen_side_to_show_index]\n",
+    "        \n",
+    "        possible_other_chosen_card_indices = list(\n",
+    "            set(list(range(len(cards)))) - set({chosen_card_index})\n",
+    "        )\n",
+    "\n",
+    "        other_card_index = np.random.choice(possible_other_chosen_card_indices)\n",
+    "        other_card = cards[other_card_index]\n",
+    "        other_card_side_to_show_index = np.random.randint(0,2)\n",
+    "        other_card_side_to_hide_index = 1 - other_card_side_to_show_index\n",
+    "        \n",
+    "        other_card_side_to_show = other_card[other_card_side_to_show_index]\n",
+    "        other_card_side_to_hide = other_card[other_card_side_to_hide_index]\n",
+    "        \n",
+    "        \n",
+    "        if chosen_side_to_show == 0 and other_card_side_to_show == 1:\n",
+    "            num_div += 1\n",
+    "            \n",
+    "            if chosen_card[other_side_index] == 0:  \n",
+    "                count_black_other_side += 1\n",
+    "            \n",
+    "    return count_black_other_side / num_div\n",
+    "\n",
+    "cards = [(0,0), (0,1), (1,1)]\n",
+    "probas = np.array([1, 1, 1])\n",
+    "probas = probas / probas.sum()\n",
+    "print(f\"Probability that the other side is black: {round(simulate_card_selection_2M7(cards, probas), 2)}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d7e37c76",
+   "id": "368ef864",
    "metadata": {},
    "outputs": [],
    "source": []
