--- a/ch-2.ipynb
+++ b/ch-2.ipynb
@@ -155,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "041d2079",
+   "id": "6dc2e2f0",
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "398fbca6",
+   "id": "f6c805f3",
    "metadata": {},
    "source": [
     "Using the [unlikely](https://github.com/Edderic/unlikely) library, Bayesian updating with the full batch, along with Bayesian updating through mini batches with only epsilon 0, seems to be more accurate than updating through mini batches with many epsilons. Mini batch updating leads to overinflated posterior distributions."
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "400db2f3",
+   "id": "306ce948",
    "metadata": {},
    "source": [
     "## 2M2\n",
@@ -426,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7624957d",
+   "id": "40d8dc21",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98fad23d",
+   "id": "5953f5c9",
    "metadata": {},
    "source": [
     "## 2M3\n",
@@ -656,7 +656,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "6e452658",
+   "id": "2464f2f1",
    "metadata": {},
    "outputs": [
     {
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c6730e00",
+   "id": "13af93f3",
    "metadata": {},
    "source": [
     "We can construct two models of the world: one corresponding to the Earth and one corresponding to Mars. We then run the ABC-SMC algorithm. Afterwards, we compute to see how many times the samples produced from Earth are accepted and compare that to how many times the samples from Mars were accepted. We then normalize those two numbers by the number of total samples. "
@@ -685,7 +685,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "555e2319",
+   "id": "68e91b1a",
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d06d1eda",
+   "id": "ea1a92f2",
    "metadata": {},
    "source": [
     "$P(\\text{Earth} \\mid \\text{Data}) \\approx 0.23$ "
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f476686c",
+   "id": "ae7e4030",
    "metadata": {},
    "source": [
     "## 2M4\n",
@@ -787,7 +787,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "8a44dbfe",
+   "id": "937b658b",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "5433afa9",
+   "id": "4f934bd2",
    "metadata": {},
    "outputs": [
     {
@@ -865,7 +865,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06ae5700",
+   "id": "5398940d",
    "metadata": {},
    "source": [
     "## 2M5\n",
@@ -876,7 +876,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "38c18847",
+   "id": "9e07f38e",
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +894,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3bc3a2f7",
+   "id": "b84da944",
    "metadata": {},
    "source": [
     "## 2M6\n",
@@ -905,7 +905,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "912c95d6",
+   "id": "09579559",
    "metadata": {},
    "outputs": [
     {
@@ -925,7 +925,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "154b8aa1",
+   "id": "57ab81f7",
    "metadata": {},
    "source": [
     "## 2M7\n",
@@ -936,7 +936,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "d6fb072f",
+   "id": "569a5a0c",
    "metadata": {},
    "outputs": [
     {
@@ -1000,9 +1000,263 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9a520022",
+   "metadata": {},
+   "source": [
+    "## 2H1\n",
+    "\n",
+    "Suppose there are two species of panda bear. Both are equally common in the wild and live in the same places. They look exactly alike and eat the same food, and there is yet no genetic assay  capable of telling them apart. They differ however in their family sizes. Species A gives birth to twins 10% of the time, otherwise birthing a single infant. Species B births twins 20% of the time, otherwise  birthing singleton infants. Assume these numbers are known with certainty, from many years of field research. \n",
+    "\n",
+    "Now suppose you are managing a captive panda breeding program. You have a new female panda  of unknown species, and she has just given birth to twins. What is the probability that her next birth  will also be twins? "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "ec123936",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████| 5000/5000 [00:14<00:00, 350.27it/s]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'Species A': 0.3294, 'Species B': 0.6706}"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from unlikely.models import Models, Model\n",
+    "from unlikely.priors import Beta\n",
+    "from unlikely.engine import abc_smc\n",
+    "from unlikely.misc import create_images_from_data\n",
+    "\n",
+    "\n",
+    "def simulate(priors, obs):\n",
+    "    \"\"\"\n",
+    "    Data is binomially distributed.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return np.random.binomial(n=1, p=priors['proba_twin'], size=len(obs))\n",
+    "    \n",
+    "def distance(x,y):\n",
+    "    \"\"\"\n",
+    "    Compare the number of ones in one vs. the other.\n",
+    "    \"\"\"\n",
+    "    return abs(x.sum() - y.sum())\n",
+    "\n",
+    "obs = np.array([1]) # observe a twin birth\n",
+    "\n",
+    "num_particles = 5000\n",
+    "epsilons = [0]\n",
+    "\n",
+    "models = Models(\n",
+    "    [\n",
+    "        Model(\n",
+    "            name='Species A',\n",
+    "            priors=[\n",
+    "                # Species A gives birth to twins 10% of the time\n",
+    "                Beta(alpha=1000 + 1, beta=9000 + 1, name=\"proba_twin\")\n",
+    "            ],\n",
+    "            simulate=simulate,\n",
+    "            prior_model_proba=0.5,\n",
+    "        ),\n",
+    "\n",
+    "        Model(\n",
+    "            name='Species B',\n",
+    "            priors=[\n",
+    "                # Species B gives birth to twins 20% of the time\n",
+    "                Beta(alpha=2000 + 1, beta=8000 + 1, name=\"proba_twin\")\n",
+    "            ],\n",
+    "            simulate=simulate,\n",
+    "            prior_model_proba=0.5,\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "abc_smc(\n",
+    "    num_particles=num_particles,\n",
+    "    epsilons=epsilons,\n",
+    "    models=models,\n",
+    "    obs=obs,\n",
+    "    distance=distance,\n",
+    ")\n",
+    "\n",
+    "models.get_posterior_probabilities()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "907745ed",
+   "metadata": {},
+   "source": [
+    "There's a 1/3 chance that the species of mother is A, while there's a 2/3 chance that it is B. The data generating process in terms of the DAG is:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5504e507",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "image/svg+xml": [
+       "<?xml version=\"1.0\" encoding=\"UTF-8\" standalone=\"no\"?>\n",
+       "<!DOCTYPE svg PUBLIC \"-//W3C//DTD SVG 1.1//EN\"\n",
+       " \"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\">\n",
+       "<!-- Generated by graphviz version 2.49.0 (0)\n",
+       " -->\n",
+       "<!-- Title: species&#45;birthing&#45;dag Pages: 1 -->\n",
+       "<svg width=\"244pt\" height=\"116pt\"\n",
+       " viewBox=\"0.00 0.00 244.19 116.00\" xmlns=\"http://www.w3.org/2000/svg\" xmlns:xlink=\"http://www.w3.org/1999/xlink\">\n",
+       "<g id=\"graph0\" class=\"graph\" transform=\"scale(1 1) rotate(0) translate(4 112)\">\n",
+       "<title>species&#45;birthing&#45;dag</title>\n",
+       "<polygon fill=\"white\" stroke=\"transparent\" points=\"-4,4 -4,-112 240.19,-112 240.19,4 -4,4\"/>\n",
+       "<!-- Species -->\n",
+       "<g id=\"node1\" class=\"node\">\n",
+       "<title>Species</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"124.74\" cy=\"-90\" rx=\"38.19\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"124.74\" y=\"-86.3\" font-family=\"Times,serif\" font-size=\"14.00\">Species</text>\n",
+       "</g>\n",
+       "<!-- Twin(t=0) = 1 -->\n",
+       "<g id=\"node2\" class=\"node\">\n",
+       "<title>Twin(t=0) = 1</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"61.74\" cy=\"-18\" rx=\"61.99\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"61.74\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">Twin(t=0) = 1</text>\n",
+       "</g>\n",
+       "<!-- Species&#45;&gt;Twin(t=0) = 1 -->\n",
+       "<g id=\"edge1\" class=\"edge\">\n",
+       "<title>Species&#45;&gt;Twin(t=0) = 1</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M110.45,-73.12C102.54,-64.33 92.55,-53.23 83.68,-43.37\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"86.15,-40.89 76.86,-35.8 80.95,-45.57 86.15,-40.89\"/>\n",
+       "</g>\n",
+       "<!-- Twin(t=1) -->\n",
+       "<g id=\"node3\" class=\"node\">\n",
+       "<title>Twin(t=1)</title>\n",
+       "<ellipse fill=\"none\" stroke=\"black\" cx=\"188.74\" cy=\"-18\" rx=\"47.39\" ry=\"18\"/>\n",
+       "<text text-anchor=\"middle\" x=\"188.74\" y=\"-14.3\" font-family=\"Times,serif\" font-size=\"14.00\">Twin(t=1)</text>\n",
+       "</g>\n",
+       "<!-- Species&#45;&gt;Twin(t=1) -->\n",
+       "<g id=\"edge2\" class=\"edge\">\n",
+       "<title>Species&#45;&gt;Twin(t=1)</title>\n",
+       "<path fill=\"none\" stroke=\"black\" d=\"M139.27,-73.12C147.42,-64.2 157.74,-52.91 166.85,-42.94\"/>\n",
+       "<polygon fill=\"black\" stroke=\"black\" points=\"169.67,-45.05 173.84,-35.31 164.5,-40.33 169.67,-45.05\"/>\n",
+       "</g>\n",
+       "</g>\n",
+       "</svg>\n"
+      ],
+      "text/plain": [
+       "<graphviz.dot.Digraph at 0x181d659a0>"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import graphviz\n",
+    "\n",
+    "from graphviz import Digraph\n",
+    "\n",
+    "dag = Digraph('species-birthing-dag')\n",
+    "dag.edge('Species', 'Twin(t=0) = 1')\n",
+    "dag.edge('Species', 'Twin(t=1)')\n",
+    "dag"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2ef6a76a",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "  P(T_{t=1} \\mid T_{t=0} = 1) &= \\sum_s P(T_{t=1}, S=s \\mid T_{t=0} = 1) \\\\\n",
+    "&= \\sum_s P(T_{t=1} \\mid S=s, T_{t=0} = 1) \\cdot P(S=s \\mid T_{t=1}) \\\\\n",
+    "&= \\sum_s P(T_{t=1} \\mid S=s) \\cdot P(S=s \\mid T_{t=0} = 1) & \\text{Once you know the Species, a previous birth doesn't tell you anything about the next birth}\\\\\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0aa4a285",
+   "metadata": {},
+   "source": [
+    "From running the above code, we have $P(S=a \\mid T_{t=0}=1) \\approx 0.334$ and $P(S=b \\mid T_{t=0}=1) \\approx 0.666$. We are also given $P(T_{t=1} \\mid S=s)$. When $S=a$, we have  $P(T_{t=1} \\mid S=a) = 0.10$. For $S=b$, it is double that: $P(T_{t=1} \\mid S=a) = 0.20$.\n",
+    "\n",
+    "Thus, the above equation reduces to:\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "\\begin{aligned}\n",
+    "\\sum_s P(T_{t=1} \\mid S=s) \\cdot P(S=s \\mid T_{t=0} = 1) &=\n",
+    "P(T_{t=1} \\mid S=a) \\cdot P(S=a \\mid T_{t=0} = 1) \\\\\n",
+    "&\\quad + P(T_{t=1} \\mid S=b) \\cdot P(S=b \\mid T_{t=0} = 1) \\\\\n",
+    "&= 0.1 \\cdot 0.334 + 0.2 \\cdot 0.666 \\\\\n",
+    "&= 0.1666 \\\\\n",
+    "&\\approx 0.17\n",
+    "\\end{aligned}\n",
+    "\\end{equation}\n",
+    "$$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f854853",
+   "metadata": {},
+   "source": [
+    "We could find the same answer by using our updated model of the world ($P(S=s \\mid T_{t=0} = 1)$) to produce imaginary data for the next birth:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "id": "1070d9a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.17020000000000002"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "simulate(\n",
+    "    models[0].prev_accepted_proposals, \n",
+    "    models[0].prev_accepted_proposals\n",
+    ").mean() * models.get_posterior_probabilities()['Species A'] + simulate(\n",
+    "    models[1].prev_accepted_proposals, \n",
+    "    models[1].prev_accepted_proposals\n",
+    ").mean() * models.get_posterior_probabilities()['Species B']"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "368ef864",
+   "id": "c402e335",
    "metadata": {},
    "outputs": [],
    "source": []
