--- a/ch-2.ipynb
+++ b/ch-2.ipynb
@@ -1254,9 +1254,112 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3c5b156e",
+   "metadata": {},
+   "source": [
+    "## 2H2\n",
+    "\n",
+    "Recall all the facts from the problem above. Now compute the probability that the panda we  have is from species A, assuming we have observed only the first birth and that it was twins."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "8d7bc6b3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████| 5000/5000 [00:13<00:00, 358.93it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probabilities of the species of the mother, given we observed twins: {'Species A': 0.3496, 'Species B': 0.6504}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from unlikely.models import Models, Model\n",
+    "from unlikely.priors import Beta\n",
+    "from unlikely.engine import abc_smc\n",
+    "from unlikely.misc import create_images_from_data\n",
+    "\n",
+    "\n",
+    "def simulate(priors, obs):\n",
+    "    \"\"\"\n",
+    "    Data is binomially distributed.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    return np.random.binomial(n=1, p=priors['proba_twin'], size=len(obs))\n",
+    "    \n",
+    "def distance(x,y):\n",
+    "    \"\"\"\n",
+    "    Compare the number of ones in one vs. the other.\n",
+    "    \"\"\"\n",
+    "    return abs(x.sum() - y.sum())\n",
+    "\n",
+    "obs = np.array([1]) # observe a twin birth\n",
+    "\n",
+    "num_particles = 5000\n",
+    "epsilons = [0]\n",
+    "\n",
+    "models = Models(\n",
+    "    [\n",
+    "        Model(\n",
+    "            name='Species A',\n",
+    "            priors=[\n",
+    "                # Species A gives birth to twins 10% of the time\n",
+    "                Beta(alpha=1000 + 1, beta=9000 + 1, name=\"proba_twin\")\n",
+    "            ],\n",
+    "            simulate=simulate,\n",
+    "            prior_model_proba=0.5,\n",
+    "        ),\n",
+    "\n",
+    "        Model(\n",
+    "            name='Species B',\n",
+    "            priors=[\n",
+    "                # Species B gives birth to twins 20% of the time\n",
+    "                Beta(alpha=2000 + 1, beta=8000 + 1, name=\"proba_twin\")\n",
+    "            ],\n",
+    "            simulate=simulate,\n",
+    "            prior_model_proba=0.5,\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "abc_smc(\n",
+    "    num_particles=num_particles,\n",
+    "    epsilons=epsilons,\n",
+    "    models=models,\n",
+    "    obs=obs,\n",
+    "    distance=distance,\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    \"The probabilities of the species of the mother, given we observed twins: \"\\\n",
+    "    + f\"{models.get_posterior_probabilities()}\" \n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c402e335",
+   "id": "c5c62d3a",
    "metadata": {},
    "outputs": [],
    "source": []
