--- a/ch-2.ipynb
+++ b/ch-2.ipynb
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3c5b156e",
+   "id": "809aa88e",
    "metadata": {},
    "source": [
     "## 2H2\n",
@@ -1266,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "8d7bc6b3",
+   "id": "1cc86fcb",
    "metadata": {},
    "outputs": [
     {
@@ -1357,9 +1357,72 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4500d6c9",
+   "metadata": {},
+   "source": [
+    "## 2H3\n",
+    "\n",
+    "Continuing on from the previous problem, suppose the same panda mother has a second birth  and that it is not twins, but a singleton infant. Compute the posterior probability that this panda is species A."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "99817059",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████| 5000/5000 [00:00<00:00, 5901.81it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probabilities of the species of the mother, given we observed 1 twin and 1 singleton: {'Species A': 0.3918, 'Species B': 0.6082}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "models.use_distribution_from_samples() # set posterior distribution samples as new prior.\n",
+    "\n",
+    "abc_smc(\n",
+    "    num_particles=num_particles,\n",
+    "    epsilons=epsilons,\n",
+    "    models=models,\n",
+    "    obs=np.array([0]),\n",
+    "    distance=distance,\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    \"The probabilities of the species of the mother, given we observed 1 twin and 1 singleton: \"\\\n",
+    "    + f\"{models.get_posterior_probabilities()}\" \n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2cc61388",
+   "metadata": {},
+   "source": [
+    "Using the posterior from 2H2 as the prior, and combining that with the observation of a singleton infant, Species A became more likely, but Species B is still the more probable."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5c62d3a",
+   "id": "7a20fc9f",
    "metadata": {},
    "outputs": [],
    "source": []
