solve all of ch-2

--- a/ch-2.ipynb
+++ b/ch-2.ipynb
@@ -1255,7 +1255,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "809aa88e",
+   "id": "95d97ca6",
    "metadata": {},
    "source": [
     "## 2H2\n",
@@ -1266,7 +1266,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1cc86fcb",
+   "id": "85d01302",
    "metadata": {},
    "outputs": [
     {
@@ -1358,7 +1358,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4500d6c9",
+   "id": "e1e1802f",
    "metadata": {},
    "source": [
     "## 2H3\n",
@@ -1369,7 +1369,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "99817059",
+   "id": "c0599867",
    "metadata": {},
    "outputs": [
     {
@@ -1413,16 +1413,243 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cc61388",
+   "id": "30811192",
    "metadata": {},
    "source": [
     "Using the posterior from 2H2 as the prior, and combining that with the observation of a singleton infant, Species A became more likely, but Species B is still the more probable."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "21c4c76e",
+   "metadata": {},
+   "source": [
+    "## 2H4\n",
+    "\n",
+    "A common boast of Bayesian statisticians is that Bayesian inference makes it easy to use all of  the data, even if the data are of different types.  So suppose now that a veterinarian comes along who has a new genetic test that she claims can  identify the species of our mother panda. But the test, like all tests, is imperfect. This is the information you have about the test:  \n",
+    "\n",
+    "• The probability it correctly identifies a species A panda is 0.8.  \n",
+    "• The probability it correctly identifies a species B panda is 0.65. \n",
+    "\n",
+    "The vet administers the test to your panda and tells you that the test is positive for species A. First  ignore your previous information from the births and compute the posterior probability that your  panda is species A. Then redo your calculation, now using the birth data as well."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a9e59eeb",
+   "metadata": {},
+   "source": [
+    "### Using vet genetic test only:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "8666b6da",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████████████████| 5000/5000 [00:02<00:00, 1856.05it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probabilities of the species of the mother, given the doctor's claim: {'Species A': 0.7004, 'Species B': 0.2996}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from unlikely.models import Models, Model\n",
+    "from unlikely.priors import Beta\n",
+    "from unlikely.engine import abc_smc\n",
+    "from unlikely.misc import create_images_from_data\n",
+    "\n",
+    "def simulate(priors, obs):\n",
+    "    return np.random.binomial(n=1, p=priors['doc_proba'], size=len(obs))\n",
+    "        \n",
+    "def distance(x,y):\n",
+    "    \"\"\"\n",
+    "    Compare the number of ones in one vs. the other.\n",
+    "    \"\"\"\n",
+    "    return abs(x.sum() - y.sum())\n",
+    "\n",
+    "obs = np.array([1]) # Doctor claims a species A\n",
+    "\n",
+    "num_particles = 5000\n",
+    "epsilons = [0]\n",
+    "\n",
+    "models = Models(\n",
+    "    [\n",
+    "        Model(\n",
+    "            name='Species A',\n",
+    "            priors=[\n",
+    "                Beta(alpha=8000 + 1, beta=2000 + 1, name=\"doc_proba\")\n",
+    "            ],\n",
+    "            simulate=simulate,\n",
+    "            prior_model_proba=0.5,\n",
+    "        ),\n",
+    "\n",
+    "        Model(\n",
+    "            name='Species B',\n",
+    "            priors=[\n",
+    "                Beta(alpha=3500 + 1, beta=6500 + 1, name=\"doc_proba\")\n",
+    "            ],\n",
+    "            simulate=simulate,\n",
+    "            prior_model_proba=0.5,\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "abc_smc(\n",
+    "    num_particles=num_particles,\n",
+    "    epsilons=epsilons,\n",
+    "    models=models,\n",
+    "    obs=obs,\n",
+    "    distance=distance,\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    \"The probabilities of the species of the mother, given the doctor's claim: \"\\\n",
+    "    + f\"{models.get_posterior_probabilities()}\" \n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "97d68721",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 1, 2]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(np.array([1])) + list(np.array([1,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "04cbb598",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|█████████████████████████████████████████████████████████████████████████████████████████████| 5000/5000 [00:41<00:00, 121.86it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The probabilities of the species of the mother, given the doctor's claim and births: {'Species A': 0.5634, 'Species B': 0.4366}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "from unlikely.models import Models, Model\n",
+    "from unlikely.priors import Beta\n",
+    "from unlikely.engine import abc_smc\n",
+    "from unlikely.misc import create_images_from_data\n",
+    "\n",
+    "def simulate(priors, obs):\n",
+    "    genetic_test = np.random.binomial(n=1, p=priors['genetic_test'], size=1)\n",
+    "    twin_birth = np.random.binomial(n=1, p=priors['twin_birth'], size=len(obs['twin_birth']))\n",
+    "    \n",
+    "    return {\n",
+    "        'genetic_test': genetic_test,\n",
+    "        'twin_birth': twin_birth\n",
+    "    }\n",
+    "        \n",
+    "def distance(x,y):\n",
+    "    \"\"\"\n",
+    "    Compare the number of ones in one vs. the other.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    x_list = list(x['genetic_test']) + list(x['twin_birth'])\n",
+    "    y_list = list(y['genetic_test']) + list(y['twin_birth'])\n",
+    "    \n",
+    "    return abs(x['genetic_test'] - y['genetic_test']) \\\n",
+    "        + sum(abs(x['twin_birth'] - y['twin_birth']))\n",
+    "\n",
+    "obs = {\n",
+    "    'genetic_test': [1], # Species A\n",
+    "    'twin_birth': [1, 0]\n",
+    "}\n",
+    "\n",
+    "np.array([1]) # Doctor claims a species A\n",
+    "\n",
+    "num_particles = 5000\n",
+    "epsilons = [0]\n",
+    "\n",
+    "models = Models(\n",
+    "    [\n",
+    "        Model(\n",
+    "            name='Species A',\n",
+    "            priors=[\n",
+    "                Beta(alpha=8000 + 1, beta=2000 + 1, name=\"genetic_test\"),\n",
+    "                Beta(alpha=1000 + 1, beta=9000 + 1, name=\"twin_birth\")\n",
+    "            ],\n",
+    "            simulate=simulate,\n",
+    "            prior_model_proba=0.5,\n",
+    "        ),\n",
+    "\n",
+    "        Model(\n",
+    "            name='Species B',\n",
+    "            priors=[\n",
+    "                Beta(alpha=3500 + 1, beta=6500 + 1, name=\"genetic_test\"),\n",
+    "                Beta(alpha=2000 + 1, beta=8000 + 1, name=\"twin_birth\")\n",
+    "            ],\n",
+    "            simulate=simulate,\n",
+    "            prior_model_proba=0.5,\n",
+    "        )\n",
+    "    ]\n",
+    ")\n",
+    "\n",
+    "abc_smc(\n",
+    "    num_particles=num_particles,\n",
+    "    epsilons=epsilons,\n",
+    "    models=models,\n",
+    "    obs=obs,\n",
+    "    distance=distance,\n",
+    ")\n",
+    "\n",
+    "print(\n",
+    "    \"The probabilities of the species of the mother, given the doctor's claim and births: \"\\\n",
+    "    + f\"{models.get_posterior_probabilities()}\" \n",
+    ")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7a20fc9f",
+   "id": "ec0663c6",
    "metadata": {},
    "outputs": [],
    "source": []
